--- a/src/static/scss/components/_theme-autocomplete.scss
+++ b/src/static/scss/components/_theme-autocomplete.scss
@@ -1,4 +1,6 @@
 .theme-autocomplete {
+  position: relative;
+
   & > .themes {
     display: flex;
     align-items: center;
@@ -8,6 +10,8 @@
     & > .title {
       font-size: .5625rem;
       font-weight: 500;
+
+      margin-right: .75rem;
 
       letter-spacing: 1.5px;
       text-transform: uppercase;
@@ -22,5 +26,15 @@
         margin-left: .75rem;
       }
     }
+  }
+
+  & > ul {
+    position: absolute;
+    z-index: 2;
+    top: .5rem;
+  }
+
+  & > input {
+    margin-top: .5rem;
   }
 }
