--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -45,3 +45,4 @@
 @import 'components/user-profile';
 @import 'components/close-icon';
 @import 'components/input-filter';
+@import 'components/overlay-modal';
