--- a/src/static/scss/components/_app-modal.scss
+++ b/src/static/scss/components/_app-modal.scss
@@ -9,7 +9,6 @@
   flex-direction: column;
 
   width: 100%;
-  height: 100%;
 
   background-color: #FFF;
 
@@ -18,6 +17,7 @@
     left: 50%;
 
     width: 70%;
+
     height: auto;
     max-height: calc(100% - 3rem);
 
@@ -56,9 +56,9 @@
     @include header-shadow;
   }
 
-  & > header > .close {
+  & > header > .close-icon {
     position: absolute;
-    right: 1rem;
+    right: 1.6rem;
 
     display: flex;
     align-items: center;
@@ -120,11 +120,11 @@
     }
   }
 
-  & > .content > .footer > .solid-button {
+  & > .content > .solid-button {
     font-size: $font-size-deci;
 
-    margin: 0 auto;
     margin-top: 2rem;
+    margin-left: auto;
     padding: .5rem 2rem;
   }
 
