--- a/src/templates/components/suggestion-input.html
+++ b/src/templates/components/suggestion-input.html
@@ -2,7 +2,7 @@
 
 <div class="suggestion-input js-suggestionInput">
   <div class="content">
-    <div class="close js-close"><img class="icon" src="{% static 'img/close.svg' %}"></div>
+    <div class="close-icon js-close"><img class="icon" src="{% static 'img/close.svg' %}"></div>
     <button class="suggestion-opinion js-opinionButton">Ver sugestões</button>
     <h3>Você destacou o trecho:</h3>
     <div class="text">
