--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -6,14 +6,17 @@
 {% block content %}
 
 <main class="document-body js-documentBody" data-selection-enabled="{% if request.user.is_authenticated %}true{% else %}false{% endif %}">
-  <div class="header">
-    {% if object.document_type %}
-    <span class="epigraph">{{ object.document_type.initials }} {{ object.number }}/{{ object.year }}</span>
-    {% endif %}
-    <h2>{{ object.title }}</h2>
-    <p>{{ object.description }}</p>
+  <header>
+    <div class="info">
+      {% if object.document_type %}
+      <span class="epigraph">{{ object.document_type.initials }} {{ object.number }}/{{ object.year }}</span>
+      {% endif %}
+      <span class="date">Aberto em 16/12/2018</span>
+    </div>
+    <h1>{{ object.title }}</h1>
+    <p class="description">{{ object.description }}</p>
     <hr>
-  </div>
+  </header>
 
   {% for excerpt in object.excerpts.all %}
     {% if excerpt.excerpt_type.align_center %}
