--- a/src/templates/components/filter-modal.html
+++ b/src/templates/components/filter-modal.html
@@ -25,10 +25,10 @@
           <div class="theme-autocomplete js-themeAutocomplete">
             <label>{% trans "Meus Grupos" %}</label>
             <input class="js-input" type="text" name="theme-autocomplete">
-            {{form.themes.errors}}
+            {# {{form.themes.errors}} #}
             <div class="themes">
               <span class="title _hidden js-title">Meus Grupos:</span>
-              <ul class="tags js-tags"></ul>
+              <ul class="tags js-groups"></ul>
             </div>
           </div>
         </div>
@@ -65,6 +65,6 @@
       </div>
     </form>
 
-    <a href="#" class="solid-button -green">Salvar</a>
+    <a href="#" class="solid-button -green js-applyFilter">Salvar</a>
   </div>
 </div>
