--- a/src/static/scss/base/_reusables.scss
+++ b/src/static/scss/base/_reusables.scss
@@ -5,14 +5,22 @@
   background-position: 100% calc(100% - #{$offset});
 }
 
+@mixin hidden-shadow {
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s $swift-out;
+}
+
 @mixin card-shadow {
   box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.08);
+  transition: box-shadow 0.3s $swift-out;
 }
 
 @mixin header-shadow {
   box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.08);
+  transition: box-shadow 0.3s $swift-out;
 }
 
 @mixin footer-shadow {
   box-shadow: 0px -3px 4px rgba(0, 0, 0, 0.08);
+  transition: box-shadow 0.3s $swift-out;
 }
