Change background color

--- a/src/static/scss/components/_generic-modal.scss
+++ b/src/static/scss/components/_generic-modal.scss
@@ -11,7 +11,7 @@
   width: 100%;
   height: 100%;
 
-  background-color: $color-whitesmoke;
+  background-color: #FFF;
 
   @include bp-mediumup {
     top: 50%;
