--- a/src/static/scss/components/_generic-modal.scss
+++ b/src/static/scss/components/_generic-modal.scss
@@ -44,7 +44,7 @@
     height: 4rem;
     padding: 0 1.6rem;
 
-    background-color: $color-whitesmoke;
+    background-color: #FFF;
   }
 
   & > .header.-shadow {
