Fix layout by using an at-root variant reference to the parent

--- a/src/static/scss/components/_generic-modal.scss
+++ b/src/static/scss/components/_generic-modal.scss
@@ -78,13 +78,12 @@
     padding: 1.5rem;
 
     text-align: center;
-  }
 
-  & > .content.-vote {
-    align-items: flex-start;
+    @at-root .-opinion#{&} {
+      align-items: flex-start;
 
-    text-align: left;
-  }
+      text-align: left;
+    }
   }
 
   & > .content > img,
