--- a/src/static/scss/components/_generic-modal.scss
+++ b/src/static/scss/components/_generic-modal.scss
@@ -18,7 +18,8 @@
     left: 50%;
 
     width: 70%;
-    height: 85%;
+    height: auto;
+    max-height: calc(100% - 3rem);
 
     transform: translate(-50%, -50%);
   }
