Rename generic-modal into app-modal
It's more generic that way it seems ¯\_(ツ)_/¯

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -27,7 +27,7 @@
 @import 'components/voting-action';
 @import 'components/solid-button';
 @import 'components/text-highlight';
-@import 'components/generic-modal';
+@import 'components/app-modal';
 @import 'components/simple-link';
 @import 'components/text-off';
 @import 'components/info-text';
