--- a/src/static/scss/components/_info-text.scss
+++ b/src/static/scss/components/_info-text.scss
@@ -1,8 +1,7 @@
 .info-text {
   display: flex;
+  justify-content: center;
   align-items: center;
-
-  margin-top: 2rem;
 
   & > img {
     width: 1.45rem;
