--- a/src/static/scss/components/_voting-action.scss
+++ b/src/static/scss/components/_voting-action.scss
@@ -1,4 +1,6 @@
 .voting-action {
+  margin-bottom: 1rem;
+
   & > .info {
     font-size: .875rem;
     font-weight: 500;
@@ -16,7 +18,7 @@
 
   & > .actions {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 
     margin-top: 1rem;
   }
