--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -39,6 +39,10 @@
       <input id="name" class="js-search-name">
       <div class="filter js-searchFilter">Filtros</div>
     </div>
+    <div class="filters">
+      <span class="title _hidden js-title">Filtros adicionados:</span>
+      <ul class="tags js-tags"></ul>
+    </div>
   </div>
 
   <div class="input-group">
