Feature/invited front (#38)
* Invited front

* Improve profiles

* create participant item

* add theme in participant item

* add function to remove selected participants

* add counter to boards

* Improve input profile

* remove messages from autocomplete function

* fix eslint

* Create active state

* add event to remove selected email

* Add Filter

* Improve filter

* add class empty in input-profile

* Create filter modal

* Improve invite participants

* remove fields from form and add in views

* Add inputs

* add controller to apply filter in autocomplete participants

* add filter by themes

* fix autocomplete select

* Create filters

* add filters by age, region and gender

* fix controller name

* fix filter css

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -41,3 +41,8 @@
 @import 'components/document-form';
 @import 'components/theme-tag';
 @import 'components/section-group';
+@import 'components/input-profile';
+@import 'components/user-profile';
+@import 'components/close-icon';
+@import 'components/input-filter';
+@import 'components/overlay-modal';
