--- a/src/static/scss/components/_input-text.scss
+++ b/src/static/scss/components/_input-text.scss
@@ -13,4 +13,13 @@
 
     opacity: .6;
   }
+
+  & > .input {
+    position: relative;
+
+    display: flex;
+    align-items: center;
+
+    height: 100%;
+  }
 }
