--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -22,12 +22,12 @@
 
   <div class="input-group">
     <div class="input-text">
-      <label for="id_group_name">Nome do grupo: </label>
       <input type="text" name="group_name" id="id_group_name">
+      <label for="id_group_name">Nome do grupo: </label>
     </div>
     <div class="input-text">
+      <input type="text" name="closing_date" required="" id="id_closing_date">
       <label for="id_closing_date">Data de encerramento:</label>
-      <input type="date" name="closing_date" required="" id="id_closing_date">
     </div>
   </div>
 
