--- a/src/static/scss/components/_input-text.scss
+++ b/src/static/scss/components/_input-text.scss
@@ -1,25 +1,54 @@
 .input-text {
+  position: relative;
+
   display: flex;
   flex: 1;
   flex-direction: column;
 
   margin-top: 1rem;
 
-  label {
-    font-size: $font-size-centi;
-    font-weight: 500;
+  &.-filled {
+    & input,
+    & textarea {
+      padding-top: 1.65rem !important;
+    }
 
-    margin-bottom: .5rem;
+    & label {
+      font-size: .55rem;
+      font-weight: 500;
 
-    opacity: .6;
+      transform: translateY(.55rem);
+      letter-spacing: 1px;
+      text-transform: uppercase;
+    }
   }
 
-  & > .input {
-    position: relative;
+  label {
+    font-size: .875rem;
+    font-weight: 400;
 
-    display: flex;
-    align-items: center;
+    position: absolute;
+    top: 0;
+    left: .875rem;
 
-    height: 100%;
+    padding-bottom: .1rem;
+
+    transition: all .2s cubic-bezier(.4, .0, .2, 1);
+    transform: translateY(1rem);
+    pointer-events: none;
+
+    color: $color-gray;
+  }
+
+  & input:focus + label,
+  & input:active + label,
+  & textarea:focus + label,
+  & textarea:active + label {
+    color: $color-brand;
+  }
+
+  textarea {
+    width: 100%;
+    height: 10rem;
   }
 }
