--- a/src/templates/structure/base.html
+++ b/src/templates/structure/base.html
@@ -54,6 +54,7 @@
       <script src="{% static 'js/components/navBar/view.js' %}"></script>
       <script src="{% static 'js/components/appModal/view.js' %}"></script>
       <script src="{% static 'js/components/body/view.js' %}"></script>
+      <script src="{% static 'js/components/textInput/view.js' %}"></script>
       <script src="{% static 'js/pages/base.js' %}"></script>
       {% block page_js %}
       {% endblock page_js %}
