--- a/src/templates/components/filter-modal.html
+++ b/src/templates/components/filter-modal.html
@@ -1,4 +1,4 @@
-{% extends "components/app-modal.html" %}
+{% extends "structure/app-modal.html" %}
 {% load staticfiles i18n %}
 
 {% block extra_classes %}-filter js-filterModal{% endblock %}
