--- a/src/templates/pages/new-document.html
+++ b/src/templates/pages/new-document.html
@@ -19,7 +19,7 @@
           </div>
         </div>
         <div class="input-select">
-          <label for="{{form.document_type.id_for_label}}">{% trans "Tipo" %}</label>
+          <!-- <label for="{{form.document_type.id_for_label}}">{% trans "Tipo" %}</label> -->
           <div class="select">
             {{form.document_type}}
             <div class="icon"><i class="arrow"></i></div>
