--- a/src/static/scss/components/_input-select.scss
+++ b/src/static/scss/components/_input-select.scss
@@ -1,18 +1,5 @@
 .input-select {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-
-  margin-top: 1rem;
-
-  label {
-    font-size: $font-size-centi;
-    font-weight: 500;
-
-    margin-bottom: .5rem;
-
-    opacity: .6;
-  }
+  @extend .input-text;
 
   .select {
     position: relative;
@@ -20,15 +7,28 @@
     display: flex;
     align-items: center;
 
-    @include card-shadow;
-
     select {
       flex: 1;
-
-      height: 3rem;
-      padding: 0 1rem;
+      color: $color-gray;
 
       background-color: #FFF;
+    }
+
+    option {
+      font-size: .875rem;
+      font-weight: 400;
+
+      position: absolute;
+      top: 0;
+      left: .875rem;
+
+      padding-bottom: .1rem;
+
+      transition: all .2s cubic-bezier(.4, .0, .2, 1);
+      transform: translateY(1rem);
+      pointer-events: none;
+
+      color: $color-gray;
     }
 
     .icon {
