--- a/src/static/scss/base/_unclassed.scss
+++ b/src/static/scss/base/_unclassed.scss
@@ -167,15 +167,18 @@ textarea {
 }
 
 input,
-textarea {
+textarea,
+select {
   font-size: .875rem;
 
   box-sizing: border-box;
   width: 100%;
-  height: 3rem;
+  height: 3.25rem;
   padding: .875rem;
 
   color: $color-deep-gray;
+  border: 0;
+  border-radius: 0;
 
   @include card-shadow;
 
