--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -64,7 +64,6 @@
 
 {% endblock content %}
 
-
 {% block page_js %}
 <script src="{% static 'jquery-ui-dist/jquery-ui.min.js' %}"></script>
 <script src="{% static 'js/components/openParticipation/view.js' %}"></script>
@@ -72,5 +71,6 @@
 <script src="{% static 'js/components/filterModal/view.js' %}"></script>
 <script src="{% static 'js/components/filterModal/controller.js' %}"></script>
 <script src="{% static 'js/components/themeAutocomplete/view.js' %}"></script>
+<script src="{% static 'js/components/groupAutocomplete/views.js' %}"></script>
 <script src="{% static 'js/pages/inviteParticipants.js' %}"></script>
 {% endblock page_js %}
