--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -19,46 +19,50 @@
     <h2>Criar Grupo Fechado</h2>
     <div class="close-icon"></div>
   </header>
-
-  <div class="input-group">
-    <div class="input-text">
-      <input type="text" name="group_name" id="id_group_name">
-      <label for="id_group_name">Nome do grupo: </label>
-    </div>
-    <div class="input-text">
-      <input type="text" name="closing_date" required="" id="id_closing_date">
-      <label for="id_closing_date">Data de encerramento:</label>
-    </div>
-  </div>
-
-  <h2>Gerenciar Perfis do Grupo</h2>
-
-  <div class="input-filter js-openParticipation">
-    <label for="name">Buscar perfis por nome ou email: </label>
-    <div class="input">
-      <input id="name" class="js-search-name">
-      <div class="filter js-searchFilter">Filtros</div>
-    </div>
-    <div class="filters">
-      <span class="title _hidden js-title">Filtros adicionados:</span>
-      <ul class="tags js-tags"></ul>
-    </div>
-  </div>
-
-  <div class="input-group">
-    <div class="input-profile -empty">
-      <span class="label"><b class="js-countSelectables">0</b>Perfis encontrados com o filtro </span>
-      <div class="profiles js-inputProfile">
+  <form class="document-form" method="POST">
+    {% csrf_token %}
+    {{form.non_field_errors}}
+    <div class="input-group">
+      <div class="input-text">
+        <input type="text" name="group_name" id="id_group_name">
+        <label for="id_group_name">Nome do grupo: </label>
+      </div>
+      <div class="input-text">
+        {{form.closing_date.errors}}
+        <input type="text" name="closing_date" required="" id="id_closing_date">
+        <label for="id_closing_date">Data de encerramento:</label>
       </div>
     </div>
-    <div class="input-profile -empty">
-      <span class="label"><b class="js-countSelecteds">0</b>Participantes atuais no grupo</span>
-      <div class="profiles js-selectedProfile">
+
+    <h2>Gerenciar Perfis do Grupo</h2>
+
+    <div class="input-filter js-openParticipation">
+      <label for="name">Buscar perfis por nome ou email: </label>
+      <div class="input">
+        <input id="name" class="js-search-name">
+        <div class="filter js-searchFilter">Filtros</div>
+      </div>
+      <div class="filters">
+        <span class="title _hidden js-title">Filtros adicionados:</span>
+        <ul class="tags js-tags"></ul>
       </div>
     </div>
-  </div>
 
-  <button class="solid-button -green js-sendButton">Salvar</button>
+    <div class="input-group">
+      <div class="input-profile -empty">
+        <span class="label"><b class="js-countSelectables">0</b>Perfis encontrados com o filtro </span>
+        <div class="profiles js-inputProfile">
+        </div>
+      </div>
+      <div class="input-profile -empty">
+        <span class="label"><b class="js-countSelecteds">0</b>Participantes atuais no grupo</span>
+        <div class="profiles js-selectedProfile">
+        </div>
+      </div>
+    </div>
+
+    <button class="solid-button -green">Salvar</button>
+  </form>
 </main>
 {% include "components/filter-modal.html" %}
 
@@ -67,7 +71,6 @@
 {% block page_js %}
 <script src="{% static 'jquery-ui-dist/jquery-ui.min.js' %}"></script>
 <script src="{% static 'js/components/openParticipation/view.js' %}"></script>
-<script src="{% static 'js/components/openParticipation/controller.js' %}"></script>
 <script src="{% static 'js/components/filterModal/view.js' %}"></script>
 <script src="{% static 'js/components/filterModal/controller.js' %}"></script>
 <script src="{% static 'js/components/themeAutocomplete/view.js' %}"></script>
